feat(jail): Completed jail mechanism